--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -547,6 +547,7 @@
   "test.environment.shelleyTestnetLabel": "Shelley Testnet",
   "test.environment.stagingLabel": "Staging",
   "test.environment.testnetLabel": "Testnet",
+  "voting.info.androidAppButtonUrl": "https://play.google.com/store/apps/details?id=io.iohk.vitvoting&hl=es_419&gl=US",
   "voting.info.buttonLabel": "I confirm all steps have been completed. Continue with registration.",
   "voting.info.description": "Before you begin, you must first complete the steps below:",
   "voting.info.heading": "Register to vote",
@@ -555,9 +556,9 @@
   "voting.info.stepTitle3": "Ensure you have 5 minutes to complete the registration process, and an additional hour to receive a final confirmation.",
   "voting.votingAdd.chooseWallet.step.continueButtonLabel": "Continue",
   "voting.votingAdd.chooseWallet.step.description": "For <span>fund2</span> voting you will only be able to use one wallet to register.",
-  "voting.votingAdd.chooseWallet.step.errorMinVotingFunds": "This wallet does not contain the minimum amount of {minVotingFunds} ADA which is required for voting to be available. Please select a wallet with <span>a minimum amount of {minVotingFunds} ADA</span> and click continue.",
-  "voting.votingAdd.chooseWallet.step.errorMinVotingFundsRewardsOnly": "This wallet contains only rewards balances so it cannot be voting.",
-  "voting.votingAdd.chooseWallet.step.errorRestoringWallet": "This wallet can’t be used for voting while it’s being synced.",
+  "voting.votingAdd.chooseWallet.step.errorMinVotingFunds": "This wallet does not contain the minimum amount of {minVotingFunds} ADA that is required for voting to be enabled. Please select a wallet with <span>a minimum amount of {minVotingFunds} ADA</span> and click Continue.",
+  "voting.votingAdd.chooseWallet.step.errorMinVotingFundsRewardsOnly": "This wallet contains rewards balances only, and cannot be used for voting purposes.",
+  "voting.votingAdd.chooseWallet.step.errorRestoringWallet": "The wallet cannot be used for voting purposes while it is being synced with the blockchain.",
   "voting.votingAdd.chooseWallet.step.selectWalletInputLabel": "Select wallet",
   "voting.votingAdd.chooseWallet.step.selectWalletInputPlaceholder": "Select Wallet",
   "voting.votingAdd.confirm.step.continueButtonCountDownLabel": "[{countdownRemaining} seconds left before confirmation]",
@@ -585,6 +586,8 @@
   "voting.votingAdd.qrCode.step.takeScreenShotMessage": "Take a screenshot of the QR code if you want to access it later.",
   "voting.votingAdd.qrCode.step.warningMessage": "If you lose access to the QR code, you will need to register again to generate a new QR code.",
   "voting.votingAdd.sign.step.calculatingFees": "Calculating fees",
+  "voting.votingAdd.sign.step.calculatingFees.learnMoreLink": "Learn more about this step in detail",
+  "voting.votingAdd.sign.step.calculatingFees.learntMoreLinkUrl": "https://docs.google.com/document/d/1_syHaBNjhFcB5qg_NJoBfIZIBy_ha2n042XdrDASYgY/#heading=h.u296e49etfth",
   "voting.votingAdd.sign.step.continueButtonLabel": "Submit Registration Transaction",
   "voting.votingAdd.sign.step.description": "By submitting this registration transaction, you are creating a proof of your staking balance. This proof will be used to calculate your voting power. With the exception of fees, there will be no change to the balance of your wallet.",
   "voting.votingAdd.sign.step.feesLabel": "Fees",
