--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -547,6 +547,7 @@
   "test.environment.shelleyTestnetLabel": "Shelleyテストネット",
   "test.environment.stagingLabel": "ステージング",
   "test.environment.testnetLabel": "テストネット",
+  "voting.info.androidAppButtonUrl": "https://play.google.com/store/apps/details?id=io.iohk.vitvoting&hl=es_419&gl=US",
   "voting.info.buttonLabel": "投票の登録をする",
   "voting.info.description": "始める前に、必ず以下のステップを完了してください",
   "voting.info.heading": "投票の登録をする",
@@ -555,9 +556,9 @@
   "voting.info.stepTitle3": "登録プロセスにかかる5分、さらに最終確認を受信するまでにかかる1時間の所要時間を確保してください",
   "voting.votingAdd.chooseWallet.step.continueButtonLabel": "続ける",
   "voting.votingAdd.chooseWallet.step.description": "<span>fund2</span>の投票用として、登録に使用できるウォレットは1つだけです。",
-  "voting.votingAdd.chooseWallet.step.errorMinVotingFunds": "!!!This wallet does not contain the minimum amount of {minVotingFunds} ADA which is required for voting to be available. Please select a wallet with <span>a minimum amount of {minVotingFunds} ADA</span> and click continue.",
-  "voting.votingAdd.chooseWallet.step.errorMinVotingFundsRewardsOnly": "!!!This wallet contains only rewards balances so it cannot be voting.",
-  "voting.votingAdd.chooseWallet.step.errorRestoringWallet": "!!!This wallet can’t be used for voting while it’s being synced.",
+  "voting.votingAdd.chooseWallet.step.errorMinVotingFunds": "このウォレットには投票を有効にするために必要な最低額{minVotingFunds} ADAが入っていません。<span>最低額の{minVotingFunds} ADA</span>以上入っているウォレットを選択して、[続ける]をクリックしてください。",
+  "voting.votingAdd.chooseWallet.step.errorMinVotingFundsRewardsOnly": "このウォレットに含まれているのは報酬残高のみであり、投票用には使用できません。",
+  "voting.votingAdd.chooseWallet.step.errorRestoringWallet": "このウォレットはブロックチェーンと同期中のため、投票用に使用することはできません。",
   "voting.votingAdd.chooseWallet.step.selectWalletInputLabel": "ウォレットを選択する",
   "voting.votingAdd.chooseWallet.step.selectWalletInputPlaceholder": "ウォレットを選択する",
   "voting.votingAdd.confirm.step.continueButtonCountDownLabel": "[{countdownRemaining}確認まであとx秒]",
@@ -585,6 +586,8 @@
   "voting.votingAdd.qrCode.step.takeScreenShotMessage": "あとからアクセスする可能性がある場合は、QRコードのスクリーンショットを撮っておいてください",
   "voting.votingAdd.qrCode.step.warningMessage": "QRコードへのアクセスをなくした場合、新しいQRコードを生成するためには、登録を再び行う必要があります。",
   "voting.votingAdd.sign.step.calculatingFees": "手数料を計算しています",
+  "voting.votingAdd.sign.step.calculatingFees.learnMoreLink": "このステップの詳細を見る",
+  "voting.votingAdd.sign.step.calculatingFees.learntMoreLinkUrl": "https://docs.google.com/document/d/1_syHaBNjhFcB5qg_NJoBfIZIBy_ha2n042XdrDASYgY/#heading=h.u296e49etfth",
   "voting.votingAdd.sign.step.continueButtonLabel": "登録トランザクションを送信する",
   "voting.votingAdd.sign.step.description": "この登録トランザクションを送信することによって、ステーキング残高の証明が作成されます。この証明に基づき、あなたの議決権が計算されます。手数料を除いて、ウォレットの残高が変更されることはありません。",
   "voting.votingAdd.sign.step.feesLabel": "手数料",
