--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -586,11 +586,11 @@
   "voting.votingAdd.qrCode.step.takeScreenShotMessage": "Take a screenshot of the QR code if you want to access it later.",
   "voting.votingAdd.qrCode.step.warningMessage": "If you lose access to the QR code, you will need to register again to generate a new QR code.",
   "voting.votingAdd.sign.step.calculatingFees": "Calculating fees",
-  "voting.votingAdd.sign.step.calculatingFees.learnMoreLink": "Learn more about this step in detail",
-  "voting.votingAdd.sign.step.calculatingFees.learntMoreLinkUrl": "https://docs.google.com/document/d/1_syHaBNjhFcB5qg_NJoBfIZIBy_ha2n042XdrDASYgY/#heading=h.u296e49etfth",
   "voting.votingAdd.sign.step.continueButtonLabel": "Submit Registration Transaction",
   "voting.votingAdd.sign.step.description": "By submitting this registration transaction, you are creating a proof of your staking balance. This proof will be used to calculate your voting power. With the exception of fees, there will be no change to the balance of your wallet.",
   "voting.votingAdd.sign.step.feesLabel": "Fees",
+  "voting.votingAdd.sign.step.learnMoreLink": "Learn more about this step in detail",
+  "voting.votingAdd.sign.step.learntMoreLinkUrl": "https://docs.google.com/document/d/1_syHaBNjhFcB5qg_NJoBfIZIBy_ha2n042XdrDASYgY/#heading=h.u296e49etfth",
   "voting.votingAdd.sign.step.spendingPasswordLabel": "Spending password",
   "voting.votingAdd.sign.step.spendingPasswordPlaceholder": "Spending password",
   "voting.votingAdd.steps.step.1.label": "Wallet",
