--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -586,11 +586,11 @@
   "voting.votingAdd.qrCode.step.takeScreenShotMessage": "あとからアクセスする可能性がある場合は、QRコードのスクリーンショットを撮っておいてください",
   "voting.votingAdd.qrCode.step.warningMessage": "QRコードへのアクセスをなくした場合、新しいQRコードを生成するためには、登録を再び行う必要があります。",
   "voting.votingAdd.sign.step.calculatingFees": "手数料を計算しています",
-  "voting.votingAdd.sign.step.calculatingFees.learnMoreLink": "このステップの詳細を見る",
-  "voting.votingAdd.sign.step.calculatingFees.learntMoreLinkUrl": "https://docs.google.com/document/d/1_syHaBNjhFcB5qg_NJoBfIZIBy_ha2n042XdrDASYgY/#heading=h.u296e49etfth",
   "voting.votingAdd.sign.step.continueButtonLabel": "登録トランザクションを送信する",
   "voting.votingAdd.sign.step.description": "この登録トランザクションを送信することによって、ステーキング残高の証明が作成されます。この証明に基づき、あなたの議決権が計算されます。手数料を除いて、ウォレットの残高が変更されることはありません。",
   "voting.votingAdd.sign.step.feesLabel": "手数料",
+  "voting.votingAdd.sign.step.learnMoreLink": "このステップの詳細を見る",
+  "voting.votingAdd.sign.step.learntMoreLinkUrl": "https://docs.google.com/document/d/1_syHaBNjhFcB5qg_NJoBfIZIBy_ha2n042XdrDASYgY/#heading=h.u296e49etfth",
   "voting.votingAdd.sign.step.spendingPasswordLabel": "送信時パスワード",
   "voting.votingAdd.sign.step.spendingPasswordPlaceholder": "送信時パスワード",
   "voting.votingAdd.steps.step.1.label": "ウォレット",
