--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -642,7 +642,7 @@
   "wallet.dialog.passwordTooltip": "送信時パスワードの管理および保存には、<b>パスワード管理アプリの使用が推奨されます。</b>パスワード管理アプリで専用パスワードを生成し、ここに張り付けてください。パスワードは絶対に再利用しないでください。",
   "wallet.hardware.deviceStatus.connecting": "デバイスを接続してPINを入力し、ロックを解除してください",
   "wallet.hardware.deviceStatus.connecting.failed": "ハードウェアウォレットデバイスを検出できません。",
-  "wallet.hardware.deviceStatus.connecting.known": "「{walletName}」デバイスを接続してください",
+  "wallet.hardware.deviceStatus.connecting.known": "「{walletName}」デバイスを接続してPINを入力し、ロックを解除してください",
   "wallet.hardware.deviceStatus.exportingPublicKeyError": "ハードウェアウォレットを切断して再接続し、もう一度プロセスを始めてください。",
   "wallet.hardware.deviceStatus.exporting_public_key": "デバイス上で公開鍵をエクスポートしてください",
   "wallet.hardware.deviceStatus.exporting_public_key_failed": "公開鍵のエクスポートができません",
