[DDW-481] Basic UI

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -272,8 +272,13 @@
   "settings.display.themeNames.yellow": "Yellow",
   "settings.menu.display.link.label": "Themes",
   "settings.menu.general.link.label": "General",
+  "settings.menu.stakePools.link.label": "Stake Pools",
   "settings.menu.support.link.label": "Support",
   "settings.menu.termsOfUse.link.label": "Terms of service",
+  "settings.stakePools.smash.select.label": "Off-chain data server (SMASH)",
+  "settings.stakePools.smash.select.placeholder": "Custom server",
+  "settings.stakePools.smashUrl.select.label": "SMASH server URL",
+  "settings.stakePools.smashUrl.select.placeholder": "Enter custom server",
   "settings.support.faq.content": "If you are experiencing a problem, please look for guidance using the list of {faqLink} on the support pages. If you can’t find a solution, please submit a support ticket.",
   "settings.support.faq.faqLink": "Known Issues",
   "settings.support.faq.faqLinkURL": "https://daedaluswallet.io/known-issues/",
