--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -620,8 +620,8 @@
   "wallet.byron.notification.moveFundsDescription.line2.link.label": "ウォレットを新規作成する",
   "wallet.byron.notification.moveFundsTitle": "「{activeWalletName}」の資金を移してください",
   "wallet.connect.dialog.button.cancel": "キャンセル",
-  "wallet.connect.dialog.instructions": "<p>Daedalusは現在Ledger Nano S、Ledger Nano X、Trezor Model Tハードウェアウォレットデバイスをサポートしています。<p><p><b>デバイスを初めてDaedalusにペアリングする場合</b>は、以下の指示に従ってください。</p><p><b>Daedalusとペアリング済みであるデバイスの場合</b>には、この手順を繰り返す必要はありません。トランザクションを確認する必要があるときに、デバイスを接続してください。<p>",
-  "wallet.connect.dialog.instructionsTrezorOnly": "<p><b>Daedalusが現在サポートするハードウェアウォレットデバイスはTrezor Model Tのみです。</b></p><p><b>デバイスを初めてDaedalusにペアリングする場合</b>は、以下の指示に従ってください。</p><p><b>Daedalusとペアリング済みであるデバイスの場合</b>には、この手順を繰り返す必要はありません。トランザクションを確認する必要があるときに、デバイスを接続してください。<p>",
+  "wallet.connect.dialog.instructions": "<p>DaedalusはLedger Nano S、Ledger Nano X、Trezor Model Tハードウェアウォレットデバイスをサポートしています。</p><p><b>デバイスを初めてDaedalusにペアリングする場合</b>は、以下の指示に従ってください。</p><p><b>Daedalusとペアリング済みであるデバイスの場合</b>には、この手順を繰り返す必要はありません。トランザクションを確認する必要があるときに、デバイスを接続してください。</p>",
+  "wallet.connect.dialog.instructionsTrezorOnly": "<p><b>Daedalusが現在サポートするハードウェアウォレットデバイスはTrezor Model Tのみです。</b></p><p><b>デバイスを初めてDaedalusにペアリングする場合</b>は、以下の指示に従ってください。</p><p><b>Daedalusとペアリング済みであるデバイスの場合</b>には、この手順を繰り返す必要はありません。トランザクションを確認する必要があるときに、デバイスを接続してください。</p>",
   "wallet.connect.dialog.title": "ハードウェアウォレットを接続する",
   "wallet.create.dialog.configStep": "!!!Config",
   "wallet.create.dialog.create.personal.wallet.button.label": "Shelleyウォレットを作成する",
