[DDW-481] Error handling and UI progress

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -14,6 +14,7 @@
   "api.errors.WalletAlreadyRestoredError": "Wallet you are trying to restore already exists.",
   "api.errors.WalletFileImportError": "Wallet could not be imported, please make sure you are providing a correct file.",
   "api.errors.inputsDepleted": "Cannot send from a wallet that contains only rewards balances.",
+  "api.errors.invalidSmashServer": "This URL is not a valid SMASH server",
   "api.errors.invalidAddress": "Please enter a valid address.",
   "api.errors.nothingToMigrate": "Funds cannot be transferred from this wallet because it contains some unspent transaction outputs (UTXOs), with amounts of ada that are too small to be migrated.",
   "api.errors.utxoTooSmall": "Invalid transaction.",
@@ -277,8 +278,9 @@
   "settings.menu.termsOfUse.link.label": "Terms of service",
   "settings.stakePools.smash.select.label": "Off-chain data server (SMASH)",
   "settings.stakePools.smash.select.placeholder": "Custom server",
-  "settings.stakePools.smashUrl.select.label": "SMASH server URL",
-  "settings.stakePools.smashUrl.select.placeholder": "Enter custom server",
+  "settings.stakePools.smashUrl.input.label": "SMASH server URL",
+  "settings.stakePools.smashUrl.input.placeholder": "Enter custom server",
+  "settings.stakePools.smashUrl.input.invalidUrl": "Invalid URL",
   "settings.support.faq.content": "If you are experiencing a problem, please look for guidance using the list of {faqLink} on the support pages. If you can’t find a solution, please submit a support ticket.",
   "settings.support.faq.faqLink": "Known Issues",
   "settings.support.faq.faqLinkURL": "https://daedaluswallet.io/known-issues/",
