--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -15,6 +15,7 @@
   "api.errors.WalletFileImportError": "ウォレットをインポートできませんでした。有効なファイルを指定していることを確認してください。",
   "api.errors.inputsDepleted": "報酬残高のみを含むウォレットからの送信はできません。",
   "api.errors.invalidAddress": "有効なアドレスを入力してください。",
+  "api.errors.invalidSmashServer": "!!!This URL is not a valid SMASH server",
   "api.errors.nothingToMigrate": "このウォレットに保有されている未使用トランザクションアウトプット（UTXO）の一部に、移行するために十分なADAが入っていないため、このウォレットから資金を移すことはできません。",
   "api.errors.utxoTooSmall": "無効なトランザクションです。",
   "appUpdate.overlay.button.installUpdate.label": "更新をインストールしてDaedalusを再起動する",
@@ -272,8 +273,14 @@
   "settings.display.themeNames.yellow": "イエロー",
   "settings.menu.display.link.label": "テーマ",
   "settings.menu.general.link.label": "一般",
+  "settings.menu.stakePools.link.label": "!!!Stake Pools",
   "settings.menu.support.link.label": "ユーザーサポート",
   "settings.menu.termsOfUse.link.label": "サービス利用規約",
+  "settings.stakePools.smash.select.label": "!!!Off-chain data server (SMASH)",
+  "settings.stakePools.smash.select.placeholder": "!!!Custom server",
+  "settings.stakePools.smashUrl.input.invalidUrl": "!!!Invalid URL",
+  "settings.stakePools.smashUrl.input.label": "!!!SMASH server URL",
+  "settings.stakePools.smashUrl.input.placeholder": "!!!Enter custom server",
   "settings.support.faq.content": "問題が発生している場合は、サポートページにある{faqLink}リストを参照して解決方法を探してください。解決方法が見つからない場合はサポートリクエストを送信してください。",
   "settings.support.faq.faqLink": "既知の問題",
   "settings.support.faq.faqLinkURL": "https://daedaluswallet.io/ja/known-issues/",
